Added controller for movies and updated service